--- a/starship.toml
+++ b/starship.toml
@@ -1,99 +1,328 @@
-"$schema" = 'https://starship.rs/config-schema.json'
+# =============================================================================
+# STARSHIP PROMPT CONFIGURATION
+# =============================================================================
+# Author: Ayaz
+# Purpose: Fast, minimal, informative prompt
+# Date: 2025-01-28
+#
+# Starship is a cross-shell prompt written in Rust.
+# This config shows only essential information.
+# =============================================================================
 
+# Don't print a new line at the start of the prompt
+add_newline = true
+
+# Timeout for commands that take time (git, etc.)
+command_timeout = 1000
+
+# Format
+# Minimal format that shows:
+# - Current directory
+# - Git branch and status
+# - Error indicator
+# - Kubernetes context (when relevant)
+# - Duration of last command (if > 2s)
 format = """
-[░▒▓](#a3aed2)\
-$os\
 $username\
-$hostname\
-[](bg:#769ff0 fg:#a3aed2)\
+$os\
 $directory\
-[](fg:#769ff0 bg:#394260)\
 $git_branch\
 $git_status\
-[](fg:#394260 bg:#212736)\
-$nodejs\
-$rust\
-$golang\
-$php\
-[](fg:#212736 bg:#1d2230)\
-$time\
+$kubernetes\
+$docker_context\
 $cmd_duration\
-[ ](fg:#1d2230)\
-\n$character"""
+$line_break\
+$character"""
 
-[os]
-style = "bg:#a3aed2 fg:black"
-format = '[$symbol ]($style)'
-disabled = false
+# Right prompt (optional, shows time)
+right_format = """$time"""
 
-[os.symbols]
-Fedora = "󰣛"
-Ubuntu = ""
-Macos = ""
-Windows = "󰍲"
-Linux = ""
-Debian = ""
-Arch = ""
-CentOS = ""
-
-[username]
-show_always = true
-style_user = "bg:#a3aed2 fg:black"
-style_root = "bg:#a3aed2 fg:#ff0000"
-format = '[$user]($style)'
-disabled = false
-
-[hostname]
-ssh_only = false
-style = "bg:#a3aed2 fg:black"
-format = '[@$hostname ]($style)'
-disabled = false
-
+# -----------------------------------------------------------------------------
+# DIRECTORY
+# -----------------------------------------------------------------------------
 [directory]
-style = "fg:black bg:#769ff0"
-format = "[ $path ]($style)"
 truncation_length = 3
+truncate_to_repo = true
 truncation_symbol = "…/"
+home_symbol = "~"
+read_only = " "
+style = "bold fg:#89b4fa"
+format = "[$path]($style)[$read_only]($read_only_style) "
 
 [directory.substitutions]
+"Documents" = " "
+"Downloads" = " "
+"Music" = " "
+"Pictures" = " "
+"Projects" = " "
 
+# -----------------------------------------------------------------------------
+# GIT
+# -----------------------------------------------------------------------------
 [git_branch]
-symbol = ""
-style = "bg:#394260"
-format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
+symbol = " "
+style = "bold purple"
+format = "on [$symbol$branch(:$remote_branch)]($style) "
+truncation_length = 20
+truncation_symbol = "…"
 
 [git_status]
-style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
+style = "bold red"
+format = '([\[$all_status$ahead_behind\]]($style) )'
+conflicted = "="
+ahead = "⇡${count}"
+behind = "⇣${count}"
+diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+untracked = "?${count}"
+stashed = "*"
+modified = "!${count}"
+staged = "+${count}"
+renamed = "»${count}"
+deleted = "✘${count}"
+
+[git_commit]
+commit_hash_length = 7
+tag_symbol = " "
+style = "bold green"
+format = '[\($hash$tag\)]($style) '
+only_detached = true
+
+[git_state]
+format = '\([$state( $progress_current/$progress_total)]($style)\) '
+style = "bold yellow"
+
+# -----------------------------------------------------------------------------
+# KUBERNETES
+# -----------------------------------------------------------------------------
+[kubernetes]
+disabled = false
+symbol = "☸ "
+style = "bold cyan"
+format = '[$symbol$context( \($namespace\))]($style) '
+
+[kubernetes.context_aliases]
+"docker-desktop" = "docker"
+"gke_.*_(?P<var_cluster>[\\w-]+)" = "gke-$var_cluster"
+
+# -----------------------------------------------------------------------------
+# DOCKER
+# -----------------------------------------------------------------------------
+[docker_context]
+symbol = " "
+style = "blue bold"
+format = "[$symbol$context]($style) "
+only_with_files = true
+
+# -----------------------------------------------------------------------------
+# LANGUAGES
+# -----------------------------------------------------------------------------
+[python]
+disabled = true
 
 [nodejs]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+symbol = " "
+style = "bold green"
+format = "[$symbol($version )]($style)"
+detect_files = ["package.json", ".node-version", ".nvmrc"]
 
 [rust]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+symbol = " "
+style = "bold red"
+format = "[$symbol($version )]($style)"
+detect_files = ["Cargo.toml"]
 
 [golang]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+symbol = " "
+style = "bold cyan"
+format = "[$symbol($version )]($style)"
+detect_files = ["go.mod", "go.sum"]
 
-[php]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+[lua]
+symbol = " "
+style = "bold blue"
+format = "[$symbol($version )]($style)"
+detect_files = [".lua-version", "lua"]
 
+# -----------------------------------------------------------------------------
+# COMMAND DURATION
+# -----------------------------------------------------------------------------
+[cmd_duration]
+min_time = 2000
+show_milliseconds = false
+style = "bold yellow"
+format = "took [$duration]($style) "
+
+# -----------------------------------------------------------------------------
+# PROMPT CHARACTER
+# -----------------------------------------------------------------------------
+[character]
+success_symbol = "[❯](bold green)"
+error_symbol = "[❯](bold red)"
+vimcmd_symbol = "[❮](bold green)"
+vimcmd_replace_one_symbol = "[❮](bold purple)"
+vimcmd_replace_symbol = "[❮](bold purple)"
+vimcmd_visual_symbol = "[❮](bold yellow)"
+
+# -----------------------------------------------------------------------------
+# TIME (Right prompt)
+# -----------------------------------------------------------------------------
 [time]
 disabled = false
-time_format = "%R"
-style = "bg:#1d2230"
-format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
+format = '[$time]($style) '
+style = "dimmed white"
+use_12hr = false
+time_format = "%d/%m %H:%M"
 
-[cmd_duration]
-min_time = 500
-style = "bg:#1d2230"
-format = '[[ 󰔟 $duration ](fg:#a0a9cb bg:#1d2230)]($style)'
+# -----------------------------------------------------------------------------
+# USERNAME & HOSTNAME (shown when SSH)
+# -----------------------------------------------------------------------------
+[username]
+style_user = "bg:#b4befe fg:#11111b bold"
+style_root = "bg:#f38ba8 fg:#11111b bold"
+format = "[ $user ]($style)"
 disabled = false
+show_always = true
+
+[os]
+disabled = false
+style = "bg:#313244 fg:#cdd6f4 bold"
+format = "[@$name]($style) "
+
+[hostname]
+ssh_only = true
+style = "bold blue"
+format = "[$hostname]($style) "
+
+# -----------------------------------------------------------------------------
+# DISABLED MODULES
+# -----------------------------------------------------------------------------
+# These are disabled for minimal prompt, enable as needed
+
+[aws]
+disabled = true
+
+[azure]
+disabled = true
+
+[gcloud]
+disabled = true
+
+[terraform]
+disabled = true
+
+[vagrant]
+disabled = true
+
+[nix_shell]
+disabled = true
+
+[memory_usage]
+disabled = true
+
+[battery]
+disabled = true
+
+[package]
+disabled = true
+
+[cmake]
+disabled = true
+
+[conda]
+disabled = true
+
+[crystal]
+disabled = true
+
+[dart]
+disabled = true
+
+[deno]
+disabled = true
+
+[dotnet]
+disabled = true
+
+[elixir]
+disabled = true
+
+[elm]
+disabled = true
+
+[erlang]
+disabled = true
+
+[haskell]
+disabled = true
+
+[helm]
+disabled = true
+
+[java]
+disabled = true
+
+[julia]
+disabled = true
+
+[kotlin]
+disabled = true
+
+[nim]
+disabled = true
+
+[ocaml]
+disabled = true
+
+[perl]
+disabled = true
+
+[php]
+disabled = true
+
+[purescript]
+disabled = true
+
+[raku]
+disabled = true
+
+[red]
+disabled = true
+
+[ruby]
+disabled = true
+
+[scala]
+disabled = true
+
+[swift]
+disabled = true
+
+[vlang]
+disabled = true
+
+[zig]
+disabled = true
+
+[shlvl]
+disabled = true
+
+[singularity]
+disabled = true
+
+[jobs]
+disabled = true
+
+[status]
+disabled = true
+
+[sudo]
+disabled = true
+
+[localip]
+disabled = true
+
+[env_var]
+disabled = true
+
+[custom]
+disabled = true
